--- a/pricing.html
+++ b/pricing.html
@@ -4,7 +4,7 @@ heading: Find the perfect plan for your business
 description: All plans include our award winning sales optimization solution to track your sales in real time.
 pricing_table:
   - name: Basic
-    color: "#8e8e8e"
+    color: "#247775ab"
     features:
       - text: $25 per month
         highlight: true
@@ -22,7 +22,7 @@ pricing_table:
       link: http://mysite.com?plan=basic
       text: Get started
   - name: Pro
-    color: "#4a4a4a"
+    color: "#247775"
     features:
       - text: $99 per month
         highlight: true
@@ -40,7 +40,7 @@ pricing_table:
       link: http://mysite.com?plan=pro
       text: Get started
   - name: Professional
-    color: "#000000"
+    color: "#174846"
     features:
       - text: $299 per month
         highlight: true
@@ -67,24 +67,33 @@ faq:
   - question: Questions?
     answer: Contact us for any further questions at <a href="#">john@business.com</a>.
 ---
-<div class="plans">
-	{% for plan in page.pricing_table %}
-		<ul class="plan">
-			<li style="background: {{ plan.color }}">
-				<h3>{{ plan.name }}</h3>
-			</li>
-			{% for feature in plan.features %}
-				<li {% if feature.highlight %} class="highlighted"{% endif %}>{{ feature.text }}</li>
-			{% endfor %}
 
-			{% if plan.call_to_action %}
-				<li class="pricing-cta"><div class="button"><a style="background: {{ plan.color }}" href="{{ plan.call_to_action.link }}">{{ plan.call_to_action.text }} &rarr;</a></div></li>
-			{% endif %}
-		</ul>
-	{% endfor %}
+<div class="plans">
+  {% for plan in page.pricing_table %}
+  <ul class="plan">
+    <li style="background: {{ plan.color }}">
+      <h3>{{ plan.name }}</h3>
+    </li>
+    {% for feature in plan.features %}
+    <li {% if feature.highlight %} class="highlighted" {% endif %}>
+      {{ feature.text }}
+    </li>
+    {% endfor %} {% if plan.call_to_action %}
+    <li class="pricing-cta">
+      <div class="button">
+        <a
+          style="background: {{ plan.color }}"
+          href="{{ plan.call_to_action.link }}"
+          >{{ plan.call_to_action.text }} &rarr;</a
+        >
+      </div>
+    </li>
+    {% endif %}
+  </ul>
+  {% endfor %}
 </div>
 
-{% if page.faq %}
+<!-- {% if page.faq %}
 	<h2>Pricing FAQ</h2>
 	<dl class="faq">
 		{% for item in page.faq %}
@@ -94,4 +103,4 @@ faq:
 			</div>
 		{% endfor %}
 	</dl>
-{% endif %}
+{% endif %} -->
