logo & main page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ description: Synchronize Your Data Universe with Real-Time Precision
     </div>
     <div>
       <img
-        src="{{ site.baseurl }}/images/dashboard.png"
+        src="{{ site.baseurl }}/images/connect-clusters.png"
         alt="Screenshot"
         class="screenshot editable"
       />
