--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 title: Powering Real-Time Data Exchange and Integration
-description: Synchronize Your Data Universe with Real-Time Precision
+description: BYOC Kafka Connect clusters with cloud-native goodness and love.
 ---
 
 <section class="hero">
   <div class="text-container">
     <h1 class="editable">Powering Real-Time Data Exchange and Integration</h1>
     <p class="subtext editable">
-      Synchronize Your Data Universe with Real-Time Precision
+      BYOC Kafka Connect clusters with cloud-native goodness and love.
     </p>
     <div class="cta button alt">
       <a href="{{ site.baseurl }}/contact/"
@@ -28,11 +28,9 @@ description: Synchronize Your Data Universe with Real-Time Precision
   <section>
     <div class="container flex">
       <div class="text editable">
-        <h2>How can we <strong>double</strong> our sales revenue?</h2>
+        <h2>Deploy and Manage Kafka Connect Anywhere</h2>
         <p>
-          Hydra learns your business. By analyzing your sales data, Hydra
-          optimizes your sales process and show you where you should be spending
-          your resources.
+          VMs, baremetal or Kubernetes (<3). We bake in best practices and right-sizing, automatically.
         </p>
       </div>
       <div class="image">
@@ -48,11 +46,9 @@ description: Synchronize Your Data Universe with Real-Time Precision
   <section>
     <div class="container flex">
       <div class="text editable">
-        <h2>How can I <strong>keep track</strong> of my sales team?</h2>
+        <h2>Tenant management and security, out of the box.</h2>
         <p>
-          Hydra learns your business. By analyzing your sales data, Hydra
-          optimizes your sales process and show you where you should be spending
-          your resources.
+         Manage tenants and your estate of connectors, with fine-grained REST interface authorization. No PhD in Kafka security required.
         </p>
       </div>
       <div class="image">
@@ -68,11 +64,9 @@ description: Synchronize Your Data Universe with Real-Time Precision
   <section>
     <div class="container flex">
       <div class="text editable">
-        <h2>How can I <strong>forecast</strong> the next 90 days?</h2>
+        <h2>Observability, metrics and alerting, 24x7</h2>
         <p>
-          Hydra learns your business. By analyzing your sales data, Hydra
-          optimizes your sales process and show you where you should be spending
-          your resources.
+          Keep the data flowing without interruptions. Right size your connect clusters based on demand.
         </p>
       </div>
       <div class="image">
