--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 title: Powering Real-Time Data Exchange and Integration
-description: BYOC Kafka Connect clusters with cloud-native goodness and love.
+description: Streaming data fabric across operational and analytical planes.
 ---
 
 <section class="hero">
   <div class="text-container">
     <h1 class="editable">Powering Real-Time Data Exchange and Integration</h1>
     <p class="subtext editable">
-      BYOC Kafka Connect clusters with cloud-native goodness and love.
+      Streaming data fabric across operational and analytical planes.
     </p>
     <div class="cta button alt">
       <a href="{{ site.baseurl }}/contact/"
@@ -102,7 +102,7 @@ description: BYOC Kafka Connect clusters with cloud-native goodness and love.
   </section> -->
 
   <section class="bottom-cta">
-    <h2 class="editable"><strong>Improve</strong> your sales process today</h2>
+    <h2 class="editable">BYOC Kafka Connect clusters with cloud-native goodness and love.</h2>
     <div class="button alt"><a href="#">Enlist for our private beta</a></div>
   </section>
 </div>
