update images & remove plans

--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@ description: Streaming data fabric across operational and analytical planes.
       <div class="text editable">
         <h2>Deploy and Manage Kafka Connect Anywhere</h2>
         <p>
-          VMs, baremetal or Kubernetes (<3). We bake in best practices and right-sizing, automatically.
+          VMs, baremetal or Kubernetes (<3). We bake in best practices and
+          right-sizing, automatically.
         </p>
       </div>
       <div class="image">
         <img
-          src="{{ site.baseurl }}/images/dashboard.png"
+          src="{{ site.baseurl }}/images/create-connect-cluster.png"
           alt="Screenshot"
           class="screenshot editable"
         />
@@ -48,12 +49,13 @@ description: Streaming data fabric across operational and analytical planes.
       <div class="text editable">
         <h2>Tenant management and security, out of the box.</h2>
         <p>
-         Manage tenants and your estate of connectors, with fine-grained REST interface authorization. No PhD in Kafka security required.
+          Manage tenants and your estate of connectors, with fine-grained REST
+          interface authorization. No PhD in Kafka security required.
         </p>
       </div>
       <div class="image">
         <img
-          src="{{ site.baseurl }}/images/dashboard.png"
+          src="{{ site.baseurl }}/images/permission-list.png"
           alt="Screenshot"
           class="screenshot editable"
         />
@@ -66,12 +68,13 @@ description: Streaming data fabric across operational and analytical planes.
       <div class="text editable">
         <h2>Observability, metrics and alerting, 24x7</h2>
         <p>
-          Keep the data flowing without interruptions. Right size your connect clusters based on demand.
+          Keep the data flowing without interruptions. Right size your connect
+          clusters based on demand.
         </p>
       </div>
       <div class="image">
         <img
-          src="{{ site.baseurl }}/images/dashboard.png"
+          src="{{ site.baseurl }}/images/cluster-dashboard.png"
           alt="Screenshot"
           class="screenshot editable"
         />
@@ -102,7 +105,9 @@ description: Streaming data fabric across operational and analytical planes.
   </section> -->
 
   <section class="bottom-cta">
-    <h2 class="editable">BYOC Kafka Connect clusters with cloud-native goodness and love.</h2>
+    <h2 class="editable">
+      BYOC Kafka Connect clusters with cloud-native goodness and love.
+    </h2>
     <div class="button alt"><a href="#">Enlist for our private beta</a></div>
   </section>
 </div>
