--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@ description: Streaming data fabric across operational and analytical planes.
       Streaming data fabric across operational and analytical planes.
     </p>
     <div class="cta button alt">
-      <a href="{{ site.baseurl }}/contact/"
-        >Register for our private beta program</a
-      >
+      <a href="{{ site.baseurl }}/contact/">Contact Us</a>
     </div>
     <div>
       <img
@@ -108,6 +106,8 @@ description: Streaming data fabric across operational and analytical planes.
     <h2 class="editable">
       BYOC Kafka Connect clusters with cloud-native goodness and love.
     </h2>
-    <div class="button alt"><a href="#">Enlist for our private beta</a></div>
+    <div class="button alt">
+      <a href="{{ site.baseurl }}/contact/">Contact US</a>
+    </div>
   </section>
 </div>
